<resources>
    <string name="app_name">Newsnest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="newsnest">NewsNest</string>
    <string name="stay_informed_simply">Stay informed, simply</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">cheezycode</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">zubair@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account?</string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access latest news</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="zubair">zubair</string>
    <string name="news_nest">news nest</string>
    <string name="onbaording_screen">onbaording screen</string>
    <string name="discover_the_latest_news_and_important_stories_in_one_place">Discover the latest news and important stories in one place.</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="save_what_matters">Save What Matters</string>
    <string name="des">Save the stories that matter to you and read them anytime, anywhere — even offline.</string>
    <string name="browse_news_by_category_technology_sports_business_and_more">Browse news by category — technology, sports, business, and more.</string>
    <string name="search">Search</string>
    <string name="newsnestFirst">NewsNest</string>
    <string name="news_image">News Image</string>
    <string name="detail_screen">Detail Screen</string>
    <string name="all">ALL</string>
    <string name="news_image_des">News Image</string>
    <string name="news_description">News description...</string>
    <string name="breaking_news_title">Breaking News Title</string>
    <string name="news_save">News Save</string>
</resources>